--- a/study-webpack/source/about.html
+++ b/study-webpack/source/about.html
@@ -5,10 +5,10 @@
 
 <body>
   <h1>
-    Hello, Webpack
+    Hello, About
   </h1>
   <div id="root"></div>
-  <script src="./public/index_bundle.js"></script>
+  <a href="./index.html">index</a>
 
 </body>
 
